fixing up background/spacing

--- a/src/style/FlagCard.css
+++ b/src/style/FlagCard.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     max-height: 350px;
     width: 400px;
+    margin-left: 200px;
 }
 
 .flag-page-photos {
