--- a/src/style/FlagsPage.css
+++ b/src/style/FlagsPage.css
@@ -5,6 +5,5 @@
     flex-wrap: wrap;
     flex-direction: column;
     height: 1000px;
-    margin-left: 270px;
-    margin-bottom: 75px;
+    background-color: #F1F1F1;
 }
